src/iocc/tests/ui/fail/inject-attribute-on-method.rs
use iocc::prelude::*;

pub struct Test;

#[component]
impl Test {
    #[inject]
    pub fn method(self) -> Self {
        todo!()
    }
}

fn main() {}
